Ensure control bar stays visible in audio player mode JW7-3883

--- a/src/css/imports/mixins.less
+++ b/src/css/imports/mixins.less
@@ -34,10 +34,6 @@
       width: 96%; // width assignment is required for IE11 to center correctly
     }
 
-    &.jw-state-idle .jw-controlbar {
-      display: none;
-    }
-
     .jw-nextup-container {
       bottom: @controlbar-height + .7em;
       padding-left: 0;
