--- a/src/css/states/idle.less
+++ b/src/css/states/idle.less
@@ -25,7 +25,7 @@
 
     /* hide control bar and clear display container padding on idle state unless
     cast available flag is set */
-    .jwplayer&:not(.jw-flag-cast-available) {
+    .jwplayer&:not(.jw-flag-cast-available):not(.jw-flag-audio-player) {
 
       .jw-controlbar {
         display: none;
